feat: 新增 class05(class06) 反射与 Javassist 靶场 + POC Maven 重构
新增模块:
- class05-reflection: 反射版 readObject（Class.forName → getMethod → invoke）
- class06-javassist: Javassist 字节码注入版 readObject（动态生成字节码）
- 两个模块的完整服务端代码（Student.java + UploadHandler + index.html）
- 两个模块的 POC 生成器（GenPayload + 匹配的 Student.java）

POC 重构:
- 扁平目录 → 标准 Maven 项目结构（pom.xml + src/main/java/）
- 删除各模块冗余 gen.sh（移至 _old_scripts/）
- gen_all.sh 适配 Maven 编译流程

功能改进:
- class08 页面添加命令输入框
- 修复 SPA hash 路由带 query string 时跳转首页的 bug
- 侧边栏新增 class05/class06 入口

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>